--- a/style.css
+++ b/style.css
@@ -47,11 +47,47 @@ body{
 
 /* grid section  */
 
-.image{
+.two-column-layout{
+    display: flex;
+    width: 100%;
+}
+
+.button-sector{
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    height: 300px;
+    width: 16%;
+    border-radius: 10px;
+}
+.button-sector button{
+    margin: 10px;
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 900px;
+}
+.photo-grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 80%;
+}
+
+.multiple-photo{
     display: block;
     width: 250px;
 }
-
+.multiple-photo .button-look{
+    padding: 5px 10px 5px 10px;
+    font-size: 15px;
+    border: 1px solid;
+    border-radius: 5px;
+    width: 80px;
+    text-align: center;
+    font-weight: 500;
+    
+    
+}
 .icon{
     display: flex; 
 }
