--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ body{
     font-size: 60px;
 
 }
+.two-column-layout{
+    display: flex;
+    flex-direction: column;
+}
 .watch-button{
     background-color: rgba(255, 0, 0, 0.947);
     height: 50px;
@@ -165,9 +169,25 @@ hr{
 /* media queries  */
 
 /* mobile devices  */
-@media only screen and(max-width:688px) { 
+@media only screen and (max-width:688px) { 
     .banner-section{
         display: 100%;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 1000px;
+        border-radius: 50px;
+        margin: 0;
+    }
+    .banner-section text{
+        text-overflow: ellipsis;
+        font-size: smaller;
+    }
+    .text h1{
+        font-size: 20px;
+    
     }
     .photo img{
         width: 50%;
@@ -175,5 +195,6 @@ hr{
      .photo-grid{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
+        
     }
 }
