--- a/website-2/style.css
+++ b/website-2/style.css
@@ -89,17 +89,7 @@ body{
     padding: 30px;
 
 }
-/* .multiple-photo .button-look{
-    padding: 5px 10px 5px 10px;
-    font-size: 15px;
-    border: 1px solid;
-    border-radius: 5px;
-    width: 80px;
-    text-align: center;
-    font-weight: 500;
-    margin-left: 12px;
-    
-}  */
+
  
 .multiple-photo p{
     margin-left: 12px;
@@ -160,3 +150,44 @@ hr{
     color: white;
     margin: 15px;
 }
+/* media queries  */
+
+/* mobile devices  */
+@media only screen and (max-width:688px) { 
+    .banner-section{
+        display: 100%;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 1000px;
+        border-radius: 50px;
+        margin: 0;
+    }
+    .photo-grid{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: 80%;
+    }
+    .text h1{
+        font-size: 20px;
+    
+    }
+    .photo img{
+        width: 50%;
+    }
+    .two-column-layout{
+        display: flex;
+        flex-direction: column;
+    } 
+     .multiple-photo{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        margin: 0;
+        width: 290px;
+    }
+    footer{
+        height: 800px;
+        
+    }
