--- a/style.css
+++ b/style.css
@@ -202,3 +202,51 @@ hr{
         
     }
 }
+/* media queries  */
+
+/* tablet devices  */
+@media only screen and (max-width: 992px) { 
+    .banner-section{
+        display: 100%;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 910px;
+        border-radius: 50px;
+        margin: 0;
+    }
+    .photo-grid{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        width: 360px;
+    }
+    .text h1{
+        font-size: 20px;
+    
+    }
+    .photo img{
+        width: 50%;
+    }
+    .two-column-layout{
+        display: flex;
+        flex-direction: column;
+    } 
+    .button-sector{
+        display: flex;
+    }
+     /* .multiple-photo{
+        display: grid;
+        /* grid-template-columns: repeat(1, 1fr); */
+        /* margin: 0;
+        width: 340px;
+    } */ 
+    footer{
+        height: 1100px;
+        
+    }
+    footer .last-sect{
+        justify-content: space-between;
+    }
+}
